--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "apirest for thesis project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -16,5 +16,8 @@
     "jwt-express": "^1.1.0",
     "nodemon": "^2.0.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
