--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "jwt-express": "^1.1.0",
     "nodemon": "^2.0.2",
     "request": "^2.88.2"
